Changed LogConsoleOutputToFile to off for the FileBroker exes. Seems to be causing issues sometimes in production.

--- a/FileBroker.Common/FileBrokerConfiguration.FoaeaProduction.json
+++ b/FileBroker.Common/FileBrokerConfiguration.FoaeaProduction.json
@@ -6,6 +6,6 @@
   "emailRecipients": "FOAEA_AEOEF@justice.gc.ca",
   "FTPbackupRoot": "\\\\%FOAEA_WEB_SERVER%\\FOAEAftpbackup",
   "FTProot": "\\\\%FOAEA_WEB_SERVER%\\ftpin",
-  "LogConsoleOutputToFile": true,
+  "LogConsoleOutputToFile": false,
   "opsRecipients": "FLAS-IT-SO@justice.gc.ca"
 }
